--- a/src/_metronic/assets/sass/page/layout-builder/_layout-builder.scss
+++ b/src/_metronic/assets/sass/page/layout-builder/_layout-builder.scss
@@ -5,11 +5,16 @@
 }
 
 .group-text {
-    width: 120px;
+    width: 165px;
 }
 
 .group-select {
     width: 200px;
+}
+
+.border-danger-custom {
+    border: 1px solid red;
+    border-radius: 4px;
 }
 
 .app-content{
