--- a/src/_metronic/assets/sass/page/layout-builder/_layout-builder.scss
+++ b/src/_metronic/assets/sass/page/layout-builder/_layout-builder.scss
@@ -24,3 +24,11 @@
         height: 100%;
     }
 }
+
+.border1px { 
+    border: 1px solid #000;
+}
+
+.border1pxRight { 
+    border-left: 1px solid #000;
+}
